# anvil

./: .anvil-release.toml  .gitignore  CLAUDE-CODE-PARITY-v2.1.118-131.md  CLAUDE-CODE-PARITY-v2.1.118-to-v2.1.131.md  CLAUDE-CODE-PARITY-v2.1.132-to-v2.1.139.md  CLAUDE-CODE-PARITY-v2.1.94-to-v2.1.117.md  COHESION-AUDIT.md  CONTRIBUTING.md  Cargo.toml  HANDOFF-v2.2.13.md  HN-LAUNCH.md  JCODE-ANALYSIS.md  LICENSE  PAI-SURVEY-v2.2.8.md  PHASE-0-REPORT.md  PHASE-3-REPORT.md  PHASE-3B-REPORT.md  PHASE-4-REPORT.md  PLAN-v2.2.6.md  README.md  RELEASE-AUDIT-v2.2.6.md  RELEASE-AUDIT-v2.2.7.md  RELEASE-NOTES-PUBLIC-v2.2.13.md  RELEASE-NOTES-v2.2.10.md  RELEASE-NOTES-v2.2.11.md  RELEASE-NOTES-v2.2.12.md  RELEASE-NOTES-v2.2.13.md  RELEASE-NOTES-v2.2.14-DRAFT.md  RELEASE-NOTES-v2.2.14.md  RELEASE-NOTES-v2.2.15.md  RELEASE-NOTES-v2.2.16.md  RELEASE-NOTES-v2.2.17.md  RELEASE-NOTES-v2.2.18.md  RELEASE-NOTES-v2.2.19.md  RELEASE-NOTES-v2.2.7.md  RELEASE-NOTES-v2.2.8.md  RELEASE-NOTES-v2.2.9.md  ROADMAP.md  ROLLBACK-v2.2.8.md  V2.2.7-BUCKET2-AUDIT.md  (+11 more)
crates/anvil-cli/: Cargo.toml  build.rs  build_cli_spec.rs
crates/anvil-cli/src/: agents.rs  anvild_bootstrap.rs  auth.rs  bg_handlers.rs  check.rs  cmd_ai.rs  cmd_cache.rs  cmd_provider.rs  cmd_static.rs  commands_extra.rs  commands_util.rs  configure.rs  daemon.rs  file_drop.rs  format_tool.rs  help.rs  init.rs  input.rs  main.rs  mcp_builder.rs  mcp_builder_wizard.rs  mcp_server_mode.rs  mcp_server_tools.rs  ollama_bench.rs  ollama_cmds.rs  ollama_manage.rs  ollama_requantize.rs  project.rs  providers.rs  release_cmds.rs  remote_control.rs  render.rs  respawn.rs  schedule_cmds.rs  screensaver.rs  session.rs  session_meta.rs  setup.rs  share.rs  skill_eval.rs  (+14 more)
crates/anvil-cli/src/health/: log.rs  mod.rs  modal.rs  probes.rs  repair.rs  report.rs  setup_state.rs
crates/anvil-cli/src/input/: completion.rs  history.rs  line_editor.rs  mod.rs
crates/anvil-cli/src/qmd_setup/: collection_detect.rs  config.rs  embed_backends.rs  mod.rs  node_check.rs
crates/anvil-cli/src/schedule/: cron.rs  launchd.rs  mod.rs  systemd_user.rs
crates/anvil-cli/src/tui/: clipboard.rs  completion.rs  configure_types.rs  helpers.rs  input_handler.rs  layout.rs  list_viewport.rs  mod.rs  oauth_flow.rs  paste.rs  provider_login.rs  redraw.rs  scrollback.rs  snapshot.rs  spinner_pump.rs  ssh_bridge.rs  ssh_form.rs  ssh_tab.rs  state.rs  widgets.rs
crates/anvil-cli/tests/: cancel_integration.rs  layout_live_switch.rs  layout_snapshots.rs  message_queue.rs  parallel_tab_dispatch.rs  parallel_tabs.rs  qmd_setup_states.rs  remote_status.rs  setup_flag_routing.rs  ssh_integration.rs  ssh_webui_integration.rs  tab_input_render_real.rs
crates/anvil-cli/tests/snapshots/: layout_snapshots__classic__200x60.snap  layout_snapshots__current_tui__120x40.snap  layout_snapshots__current_tui__80x24.snap  layout_snapshots__three_pane_always_on__80x24.snap  layout_snapshots__three_pane_insert__80x24.snap  layout_snapshots__three_pane_normal__80x24.snap  layout_snapshots__three_pane_small__60x20.snap
crates/anvil-sandbox-runner/: Cargo.toml
crates/anvil-sandbox-runner/src/: main.rs
crates/anvil-sandbox-runner/tests/: integration.rs
crates/api/: Cargo.toml
crates/api/src/: client.rs  error.rs  failover.rs  lib.rs  types.rs
crates/api/src/ollama_tune/: auto_tune.rs  bench.rs  fit.rs  flash_attn_bridge.rs  mod.rs  oom_suggestions.rs  policy_config.rs  tuner.rs
crates/api/src/providers/: anvil_provider.rs  azure.rs  bedrock.rs  common.rs  copilot.rs  cross_provider_models.rs  cursor.rs  gemini_oauth.rs  mod.rs  model_list.rs  ollama.rs  ollama_manage.rs  ollama_registry.rs  ollama_show.rs  ollama_tool_parser.rs  openai_compat.rs
crates/api/tests/: bedrock_sigv4_compliance.rs  client_integration.rs  openai_compat_integration.rs  provider_client_integration.rs
crates/commands/: Cargo.toml
crates/commands/assets/: traits.yaml
crates/commands/src/: agents.rs  dispatch.rs  git.rs  handlers.rs  lib.rs  plugins.rs  skill_chaining.rs  skill_triggers.rs  specs.rs  subcommands.rs  traits.rs
crates/commands/tests/: import_phase63.rs  import_phase65.rs  memory_clean.rs
crates/compat-harness/: Cargo.toml
crates/compat-harness/src/: lib.rs  skill_evals.rs
crates/plugins/: Cargo.toml
crates/plugins/src/: diagnostics.rs  hooks.rs  lib.rs  loader.rs  manager.rs  manifest.rs  marketplace.rs  registry.rs  runner.rs  session_plugins.rs  tools.rs
crates/runtime/: Cargo.toml  build.rs
crates/runtime/assets/: config-schema.json
crates/runtime/examples/: emit_schema.rs
crates/runtime/src/: agent_ctx.rs  agent_snapshot.rs  audit.rs  auto_mode.rs  auto_promote.rs  bash.rs  command_cache.rs  compact.rs  content_filter.rs  conversation.rs  cron.rs  daily.rs  effort.rs  egress.rs  file_cache.rs  file_ops.rs  goals.rs  history.rs  hooks.rs  hub.rs  json.rs  keybindings.rs  lib.rs  mcp.rs  mcp_builder_ai.rs  mcp_client.rs  mcp_stdio.rs  memory.rs  nominations.rs  oauth.rs  otel.rs  permission_allow.rs  permission_memory.rs  permissions.rs  private_memory.rs  prompt.rs  prompt_section.rs  qmd.rs  relay.rs  relay_daemon.rs  (+17 more)
crates/runtime/src/config/: anvild.rs  helpers.rs  hooks.rs  lsp.rs  mcp.rs  mod.rs  oauth.rs  otel.rs  output_style.rs  plugins.rs  profile.rs  sandbox.rs  schema.rs
crates/runtime/src/conversation/: mod.rs  permission_gate.rs  turn_executor.rs  usage_tracking.rs
crates/runtime/src/import/: artifact.rs  commit.rs  discover.rs  instructions.rs  manifest.rs  memory.rs  mod.rs  plugins.rs  report.rs  sessions.rs  settings.rs  skills.rs  stage.rs  staging.rs  translate.rs  triage.rs
crates/runtime/src/mcp_stdio/: jsonrpc.rs  mod.rs  server_manager.rs  transport.rs  types.rs
crates/runtime/src/memory_clean/: apply.rs  dedup.rs  mod.rs  plan.rs  progress.rs  report.rs  rewriter.rs  (+1 more)
crates/runtime/tests/: cancellation.rs  import_phase64.rs  l5_invariant.rs  otel_traceparent.rs
crates/tools/: Cargo.toml
crates/tools/src/: automation_ops.rs  config_ops.rs  file_ops.rs  lib.rs  search_ops.rs  system_ops.rs  task_ops.rs  team_ops.rs  web_ops.rs  worktree_ops.rs
(+278 files in other folders)
