[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "2.2.12"
edition = "2024"
license = "Proprietary"
publish = false

[workspace.dependencies]
include_dir = "0.7"
indexmap = "1"
lsp-types = "0.97"
rust-i18n = "4"
schemars = { version = "0.8", features = ["preserve_order"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
sha2 = "0.10"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
