[package]
name = "anvil-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "anvil"
path = "src/main.rs"

[dependencies]
api = { path = "../api" }
base64 = "0.22"
commands = { path = "../commands" }
rust-i18n.workspace = true
compat-harness = { path = "../compat-harness" }
crossterm = "0.28"
lsp-types.workspace = true
pulldown-cmark = "0.13"
ratatui = "0.29"
rpassword = "7"
rustyline = "15"
runtime = { path = "../runtime" }
plugins = { path = "../plugins" }
serde_json.workspace = true
syntect = "5"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
tools = { path = "../tools" }

[lints]
workspace = true
