[package]
name = "anvil-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "anvil"
path = "src/main.rs"

[features]
default = ["otel"]
otel = ["runtime/otel", "api/otel"]

[dependencies]
api = { path = "../api", default-features = false }
base64 = "0.22"
commands = { path = "../commands" }
rust-i18n.workspace = true
compat-harness = { path = "../compat-harness" }
crossterm = "0.29"
lsp-types.workspace = true
pulldown-cmark = "0.13"
ratatui = "0.30"
rpassword = "7"
rustyline = "15"
runtime = { path = "../runtime", default-features = false }
plugins = { path = "../plugins" }
serde_json.workspace = true
syntect = "5"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
tools = { path = "../tools" }
open = "5.3.3"
dirs-next = "2.0.0"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
