[package]
name = "anvil-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "anvil"
path = "src/main.rs"

[features]
default = ["otel"]
otel = ["runtime/otel", "api/otel"]

[dependencies]
api = { path = "../api", default-features = false }
base64 = "0.22"
commands = { path = "../commands" }
rust-i18n.workspace = true
compat-harness = { path = "../compat-harness" }
crossterm = "0.29"
lsp-types.workspace = true
pulldown-cmark = "0.13"
ratatui = "0.30"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rpassword = "7"
rustyline = "15"
runtime = { path = "../runtime", default-features = false }
plugins = { path = "../plugins" }
serde_json.workspace = true
syntect = "5"
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync"] }
tools = { path = "../tools" }
vt100 = "0.16"
open = "5.3.3"
dirs-next = "2.0.0"

[dev-dependencies]
serial_test = "3"
tempfile = "3"
# T5-Ssh-F integration test: in-process russh server
async-trait = "0.1"
rand = "0.8"
russh = "0.49.2"
russh-keys = "0.49.2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time"] }

[lints]
workspace = true
