[package]
name = "commands"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
plugins = { path = "../plugins" }
runtime = { path = "../runtime", default-features = false }
serde_json.workspace = true
serde.workspace = true
serde_yaml.workspace = true

[dev-dependencies]
tempfile = "3"
serial_test = "3"
