[package]
name = "runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
indexmap.workspace = true
schemars.workspace = true
sha2 = "0.10"
glob = "0.3"
lsp = { path = "../lsp" }
plugins = { path = "../plugins" }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
tokio = { version = "1", features = ["io-util", "macros", "process", "rt", "rt-multi-thread", "time"] }
walkdir = "2"
# Feature 21 — Credential Vault
aes-gcm = "0.10"
argon2 = { version = "0.5", features = ["password-hash"] }
base32 = "0.5"
base64 = "0.22"
hmac = "0.12"
sha1 = "0.10"
rand = "0.8"
# Feature — Remote Control relay
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
url = "2"
hex = "0.4.3"
dirs-next = "2.0.0"
which = "6"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
