[package]
name = "runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[features]
# Opt-in OpenTelemetry support.  Included in default builds; absent when
# --no-default-features is passed (produces a smaller, zero-telemetry binary).
default = ["otel"]
otel = [
    "opentelemetry",
    "opentelemetry_sdk",
    "opentelemetry-otlp",
    "tracing-opentelemetry",
    "tracing",
    "tracing-subscriber",
]

[dependencies]
indexmap.workspace = true
schemars.workspace = true
# OTel — only compiled when the `otel` feature is enabled.
opentelemetry        = { version = "0.27", features = ["trace"], optional = true }
opentelemetry_sdk    = { version = "0.27", features = ["rt-tokio"], optional = true }
opentelemetry-otlp   = { version = "0.27", features = ["http-proto", "reqwest-client", "reqwest-rustls"], optional = true }
tracing-opentelemetry = { version = "0.28", optional = true }
tracing              = { version = "0.1", optional = true }
tracing-subscriber   = { version = "0.3", features = ["env-filter"], optional = true }
sha2 = "0.10"
glob = "0.3"
lsp = { path = "../lsp" }
plugins = { path = "../plugins" }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
tokio = { version = "1", features = ["io-util", "macros", "process", "rt", "rt-multi-thread", "time"] }
walkdir = "2"
# Feature 21 — Credential Vault
aes-gcm = "0.10"
argon2 = { version = "0.5", features = ["password-hash"] }
base32 = "0.5"
base64 = "0.22"
hmac = "0.12"
sha1 = "0.10"
rand = "0.8"
# Feature — Remote Control relay
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
url = "2"
hex = "0.4.3"
dirs-next = "2.0.0"
which = "6"
toml = { version = "0.8", default-features = false, features = ["parse"] }
russh = "0.49.2"
russh-keys = "0.49.2"
async-trait = "0.1.89"

[dev-dependencies]
tempfile = "3"
serial_test = "3"

[lints]
workspace = true
