[package]
name = "tools"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
api = { path = "../api", default-features = false }
plugins = { path = "../plugins" }
runtime = { path = "../runtime", default-features = false }
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
tokio = { version = "1", features = ["rt-multi-thread"] }
dirs-next = "2.0.0"

[dev-dependencies]
serial_test = "3"
tempfile = "3"

[lints]
workspace = true
